\name{NEWS}
\title{News for \R Package \pkg{Pigenegene}}

\section{Changes in version 1.29.4 (2023-11-09)}{
  \subsection{Bug Fixes}{
    \itemize{
      \item The \code{averaged.network()} function now correctly
      passed test data to the \code{module.heatmap()} function. 
    }
  }
  \subsection{Changes in existing functions}{
    \itemize{
      \item More details on the effect of test data in the documentation of
      \code{one.step.pigengene()} and \code{make.decision.tree()}
      functions. \code{make.decision.tree()} returns more information on
      performance.
    }
  }
}
   
\section{Changes in version 1.27.16 (2023-06-16)}{
  \subsection{Changes in existing functions}{
    \itemize{
      \item Scaling is done in the \code{compute.pigengene()} function
      to avoid the following error that Sogand detailes on her lano:
      Error in La.svd(x, nu, nv) : error code 1 from Lapack routine 'dgesdd'
    }
  }
}

\section{Changes in version 1.27.2 (2023-05-12)}{
  \subsection{Changes in existing functions}{
    \itemize{
      \item The \code{compute.pigengene()} function does not warn about
      almost constant genes.
    }
  }
}

\section{Changes in version 1.25.16 (2023-03-22)}{
  \subsection{Changes in existing functions}{
    \itemize{
      \item Constant genes are now ignored in the
      \code{compute.pigengene(doWgcna=FALSE,...)} function to prevent a
      run time error. 
    }
  }
}

\section{Changes in version 1.25.12 (2023-03-02)}{
  \subsection{Changes in existing functions}{
    \itemize{
      \item The default value changed in
      \code{gene.mapping(leaveNA=FALSE, ...)}.
    }
  }
}

\section{Changes in version 1.25.10 (2023-01-04)}{
  \subsection{Changes in existing functions}{
    \itemize{
      \item The \code{doWgcna} option is added to the
      \code{compute.pigengene} function.
    }
  }
}

\section{Changes in version 1.25.4 (2022-12-01)}{
  \subsection{Changes in existing functions}{
    \itemize{